--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DEV_MODE=development
 PORT = 5000
 MONGO_URL =mongodb+srv://krrajan258:Rajan2580@cluster0.tkita.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = 12345
